# VK

authorization_autotests/: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  conftest.py  decorators.py  exclusion_4 (1) (2) (1) (1) (1).csv  exclusion_4 (1) (2) (1) (1) (1).csv.bak  markers.py  pyproject.toml  scripts.py  scripts_omicrone.py  start_session  test  tracer.py
authorization_autotests/allure-results/: 04de194e-7b2e-4559-962c-df8ba952c010-attachment.AttachmentType.TEXT  76dde1ff-4b58-4bdf-bd9b-e7cf60b4cb0b-attachment.AttachmentType.TEXT  a44b3cab-94a2-47bc-a463-64c22cca4313-attachment.AttachmentType.TEXT  a86427f6-e7e4-4408-95cc-0ed39f2fc387-attachment.AttachmentType.TEXT  fdae7399-1dd8-40a2-baab-bd65b01f1486-attachment.AttachmentType.TEXT
authorization_autotests/api/: duck_types.py  example_adapter.py  example_client.py  example_http_client.py  exceptions.py
authorization_autotests/api/ABC/: abstract_client.py
authorization_autotests/api/client/: adapter.py  client.py  http_client.py  ssh_client.py  user_auth.py
authorization_autotests/api/teams/idm/: idm_admin_provider.py  idm_auth.py  idm_provider.py
authorization_autotests/api/teams/rapi/: auth.py  biz.py  dl.py  messages.py  miniapps.py  search.py
authorization_autotests/api/teams/wim/: wim.py
authorization_autotests/api/testlib/: authorization.py  const.py  deployer.py  helpers.py  wsuser.py
authorization_autotests/api/ws/: calendar_queries.py  ticket  ws.py
authorization_autotests/api/ws/biz/: biz_authorization.py
authorization_autotests/common/: config.py
authorization_autotests/tests/test_biz/: test_biz.py
authorization_autotests/tests/test_mail/test_regress/: test_mail.py
authorization_autotests/tests/test_teams/: test_start_session_failed_params.py  test_team.py  test_with_session_failed_params.py
release_autotests/: .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  Dockerfile  DockerfileRuff  README.md  account_fabric.py  allure_report.py  check_duplicated_allure_ids.py  checks_fixtures.py  conftest.py  dlp-domain-config.template.json  docker-compose.yml  my_skrips.py  pyproject.toml  run_pytest.sh  variables.env
release_autotests/hooks/: commit-msg.sh
release_autotests/im.swagger.spy.exclude_path/: ICQ.json  PRE_SAAS.json  PRE_TARM.json  PRE_VKTI.json  SANDBOX.json  SSO.json  TARM.json  VKTI.json
release_autotests/pipelines/: Docker.Jenkinsfile  Jenkinsfile  Nodefile.groovy  common.groovy
release_autotests/pipelines/envs/: PRE_SAAS.Jenkinsfile  PRE_TARM.Jenkinsfile  PRE_VKTI.Jenkinsfile  SAAS.Jenkinsfile  SANDBOX.Jenkinsfile  TARM.Jenkinsfile  VKTI.Jenkinsfile
release_autotests/support/: markers.py  product_functionality.py
release_autotests/support/cases/: correct_formatted_msgs_parts.py  drafts.py  formatted_msgs.py  invalid_formatted_msgs_parts.py  metabot_keyboard.py  tasks.py
release_autotests/support/files/antivirus/: detect.json  error.json  not_detected.json  timeout.json
release_autotests/support/files/common/: audio.aac  file-sample_crashdump  file_example_name_in_english.txt  file_example_name_in_русский.txt
release_autotests/support/files/dlp/: fake_file_disconect_action.json  fake_file_with_check_file_disconnect.json  fake_file_with_check_file_disconnect_timeout.json  fake_file_with_sensitive_information.json  fake_file_without_sensitive_information.json  fake_file_without_sensitive_information_with_long_time_answer.json  test_internal_success_external_block_file.json
release_autotests/support/files/speechtotext/: file_for_speechtotext.m4a
release_autotests/support/modules/: dantic.py  events.py  filters.py
release_autotests/support/web/: utils.py
release_autotests/tests/: __init__.py
release_autotests/tests/test_bot_api/: conftest.py  test_events_get.py  test_metabot.py  test_self_get.py  test_stickers_bot.py
release_autotests/tests/test_bot_api/test_chats/: __init__.py  test_block_user.py  test_bot_avatar_set.py  test_bot_create_chat.py  test_bot_members_add.py  test_bot_members_delete.py  test_get_chat_admins.py  test_get_chat_members.py  test_get_info.py  test_get_pending_users.py  test_pin_message.py  test_send_actions.py  test_set_about.py  test_set_rules.py  test_set_title.py
release_autotests/tests/test_bot_api/test_files/: test_files_download.py  test_files_info.py  test_send_file.py  test_send_voice.py
release_autotests/tests/test_bot_api/test_isolation/: conftest.py  test_metabot_isolation.py
release_autotests/tests/test_bot_api/test_messages/: test_answer_callback_query.py  test_delete_messages.py  test_edit_text.py  test_send_task.py  test_send_text.py
release_autotests/tests/test_bot_api/test_threads/: conftest.py  test_add_thread.py  test_autosubscribe.py  test_bot_auto_autosubscribe_to_threads.py  test_get_thread_subscribers.py
release_autotests/tests/test_client_api/: common.py  conftest.py  test_myteam_config.py
release_autotests/tests/test_client_api/test_bos/: __init__.py  conftest.py  test_ack_events.py  test_event_stream.py  test_events_poll.py  test_fetch_events.py
release_autotests/tests/test_client_api/test_calls/: conftest.py
release_autotests/tests/test_client_api/test_dlp/: common.py  conftest.py
release_autotests/tests/test_client_api/test_federation/: common.py  conftest.py
release_autotests/tests/test_client_api/test_files/: conftest.py  test_antivirus.py  test_avatar_get.py  test_avatar_set.py  test_direct_upload.py  test_download.py  test_file_preview.py  test_gdpr_check.py  test_gdpr_get.py  test_info.py  test_init_upload.py  test_lottie_original.py  test_speechtotext.py  test_sticker_get.py  test_sticker_preview.py
release_autotests/tests/test_client_api/test_idm/: conftest.py  test_idm_auth_authorize_e2e_miniapp.py  test_idm_provider_create.py  test_idm_provider_delete.py  test_idm_provider_list.py  test_idm_provider_status.py
release_autotests/tests/test_client_api/test_isolation/: common.py  conftest.py  test_join_chat_isolation.py  (+1 more)
release_autotests/tests/test_guest_api/: conftest.py
release_autotests/tests/test_service_api/: conftest.py
(+536 files in other folders)
